[gd_scene load_steps=9 format=3 uid="uid://riemj5f1l4rm"]

[ext_resource type="Script" path="res://components/enemy/enemy_state_machine/enemy_state_machine.gd" id="1_aegdl"]
[ext_resource type="PackedScene" uid="uid://c82hhatiwk5v" path="res://components/enemy/enemy_state_machine/states/idle/idle.tscn" id="2_1p0xb"]
[ext_resource type="PackedScene" uid="uid://c1swlip2lqqh6" path="res://components/enemy/enemy_state_machine/states/patrol/patrol.tscn" id="3_gplgt"]
[ext_resource type="PackedScene" uid="uid://0l6cjxkqgwfw" path="res://components/enemy/enemy_state_machine/states/day_shoot/day_shoot.tscn" id="4_8pqwx"]
[ext_resource type="PackedScene" uid="uid://cnjq2c0xj5yq7" path="res://components/enemy/enemy_state_machine/states/chase/chase.tscn" id="4_87tyh"]
[ext_resource type="PackedScene" uid="uid://fidphuxnoxlf" path="res://components/enemy/enemy_state_machine/states/stun/stun.tscn" id="5_prc0u"]
[ext_resource type="PackedScene" uid="uid://c5xynwurq5xk4" path="res://components/enemy/enemy_state_machine/states/alerted/alerted.tscn" id="6_q40ef"]
[ext_resource type="PackedScene" uid="uid://cyjql5yai8we7" path="res://components/enemy/enemy_state_machine/states/day_patrol/day_patrol.tscn" id="7_ujf2g"]

[node name="EnemyStateMachine" type="Node"]
script = ExtResource("1_aegdl")

[node name="Idle" parent="." instance=ExtResource("2_1p0xb")]
unique_name_in_owner = true

[node name="DayPatrol" parent="." instance=ExtResource("7_ujf2g")]
unique_name_in_owner = true

[node name="DayShoot" parent="." instance=ExtResource("4_8pqwx")]
unique_name_in_owner = true

[node name="Patrol" parent="." instance=ExtResource("3_gplgt")]
unique_name_in_owner = true

[node name="Chase" parent="." instance=ExtResource("4_87tyh")]
unique_name_in_owner = true

[node name="Stun" parent="." instance=ExtResource("5_prc0u")]
unique_name_in_owner = true

[node name="Alerted" parent="." instance=ExtResource("6_q40ef")]
unique_name_in_owner = true
